--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
   <string name="app_name">Omego</string>
   <string name="board_size">Board size</string>
+  <string name="new_game">New Game</string>
+  <string name="start_game">Start Game</string>
 </resources>
